Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50583

Crash after getting QComboBox::completer

    XMLWordPrintable

Details

    • 64f6169f61ce8c982a1b92b20f930518a5f0d477 (qt/qtbase/dev)

    Description

      Crash after getting QComboBox::completer from child class

      struct ComboBox: public QComboBox {
          QStringListModel m_model;
      
          ComboBox(){
              setCompleter(new QCompleter);
              completer()->setModel(&m_model);
          }
      };
      

      and run;

      ComboBox box;
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mmutz Marc Mutz
            dix Sergei Panin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes